--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1,4 +1,4 @@
-
+@charset "UTF-8";
 /*
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
@@ -270,12 +270,12 @@ ol {
   display: block;
 }
 
-
 @media screen and (min-width: 768px) {
   .page-header {
     padding-top: 36px;
   }
 }
+
 .page-header .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -300,7 +300,6 @@ ol {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-
 }
 
 @media screen and (min-width: 768px) {
@@ -389,7 +388,6 @@ ol {
   }
 }
 
-
 .buttons-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -460,25 +458,6 @@ ol {
   bottom: -160px;
 }
 
-.about {
-  background-color: #fff5f6;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-top: 125px;
-  padding-bottom: 18px;
-}
-
-.about-description {
-  font-family: Titan One;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 1.167;
-  text-align: center;
-  text-transform: uppercase;
-  color: #ffa5ba;
-}
 .products {
   padding-top: 120px;
   padding-bottom: 98px;
@@ -497,23 +476,6 @@ ol {
   border-radius: 24px;
 }
 
-.title-container {
-  max-width: 200px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.about-paragraph {
-  max-width: 220px;
-  font-family: DM Sans;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.583;
-  color: #000000;
-  display: block;
-  margin: 46px auto;
-  }
 .products-item-icecoffee {
   position: relative;
   background-color: #f0d1a5;
@@ -535,11 +497,6 @@ ol {
   max-width: 100%;
 }
 
-
-.about-img {
-  display: block;
-  width: 100%;
-  }
 .products-item-name {
   font-family: "Titan One", cursive;
   font-size: 20px;
@@ -560,111 +517,6 @@ ol {
   border-radius: 50%;
   background-color: #ffffff;
 }
-.about-background {
-  display: block;
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-image: url(../images/images/about/backgraund-img/backmilkMobile@1x.png);
-}
-
-.about-text {
-  font-family: DM Sans;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 162%;
-  color: #907e82;
-  margin: 0 auto;
-  max-width: 220px;
-}
-
-.about-btn {
-  margin-top: 17px;
-  width: 176px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media screen and (min-width: 768px) {
-  .title-container {
-    max-width: 768px;
-  }
-  .about-description {
-    font-size: 26px;
-    line-height: 30px;
-  }
-  .title {
-    font-size: 48px;
-    line-height: 55px;
-  }
-  .about-background {
-    background-image: none;
-  }
-  .about-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 0 auto;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .img-container {
-    max-width: 340px;
-    height: 340px;
-    margin: 0;
-    margin-top: 50px;
-    margin-right: 17px;
-  }
-  .about-img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0;
-  }
-  .text-about {
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    text-align: start;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: start;
-    justify-items: start;
-    -ms-grid-column-align: start;
-        justify-self: start;
-  }
-  .about-paragraph {
-    max-width: 340px;
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.7;
-    margin: 0;
-    margin-top: 100px;
-    margin-bottom: 50px;
-  }
-  .about-text {
-    max-width: 340px;
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.7;
-    letter-spacing: 0.04em;
-  }
-  .about-btn {
-    margin: 0;
-    margin-top: 62px;
-    width: 176px;
-  }
 
 .products-item-point::before {
   position: absolute;
@@ -807,30 +659,31 @@ ol {
   background-position: right 0px bottom 80px;
 }
 
-.about .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+.about-description {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.167;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffa5ba;
 }
 
-.about .title {
-  margin-bottom: 26px;
+.title {
+  margin-top: 15px;
+  font-size: 34px;
+  line-height: 39px;
 }
 
-.advantages {
-  background-color: #fff5f6;
-  margin: auto;
-  padding-bottom: 97px;
-  padding-top: 21px;
-  }
+.title-container {
+  max-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .about-paragraph {
+  max-width: 220px;
   font-family: DM Sans;
   font-style: normal;
   font-weight: 500;
@@ -838,16 +691,27 @@ ol {
   line-height: 1.583;
   color: #000000;
   display: block;
-  margin-bottom: 40px;
+  margin: 46px auto;
 }
 
 .img-container {
-  margin-bottom: 46px;
+  max-width: 280px;
+  margin: 0 auto;
 }
 
-.about-right-side {
-  width: 220px;
-  margin-bottom: 20px;
+.about-img {
+  display: block;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 26px;
+}
+
+.about-background {
+  display: block;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .about-text {
@@ -857,15 +721,119 @@ ol {
   font-size: 12px;
   line-height: 162%;
   color: #907e82;
-}
-
-.about-text-span {
-  display: block;
-  margin-top: 10px;
+  margin: 0 auto;
+  max-width: 220px;
 }
 
 .about-btn {
+  margin-top: 17px;
   width: 176px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .title-container {
+    max-width: 768px;
+  }
+  .about-description {
+    font-size: 26px;
+    line-height: 30px;
+  }
+  .title {
+    font-size: 48px;
+    line-height: 55px;
+  }
+  .about {
+    background-image: none;
+  }
+  .about-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0 auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .img-container {
+    max-width: 340px;
+    height: 340px;
+    margin: 0;
+    margin-top: 50px;
+    margin-right: 17px;
+  }
+  .about-img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+  }
+  .text-about {
+    margin-top: 100px;
+  }
+  .about-paragraph {
+    max-width: 340px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.7;
+    margin: 0;
+    margin-bottom: 50px;
+  }
+  .about-text {
+    max-width: 340px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.04em;
+  }
+  .about-btn {
+    margin: 0;
+    margin-top: 62px;
+    width: 176px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about-container {
+    background-image: url(../images/images/about/backgraund-img/backmilkDecktop@1x.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .text-about {
+    margin-left: 75px;
+    margin-bottom: 145px;
+  }
+  .title-container {
+    max-width: 1200px;
+  }
+  .about-description {
+    font-size: 30px;
+    line-height: 34px;
+  }
+  .title {
+    font-size: 58px;
+    line-height: 66px;
+  }
+  .about-paragraph {
+    max-width: 463px;
+    font-size: 16px;
+    line-height: 1.7;
+  }
+  .about-text {
+    max-width: 463px;
+    font-size: 14px;
+    line-height: 1.9;
+  }
+  .about-btn {
+    margin-top: 35px;
+  }
 }
 
 .advantages {
@@ -938,7 +906,6 @@ ol {
   position: relative;
 }
 
-
 .advantages-list-item:first-child::before {
   content: url("../images/about/icon2.png");
   width: 50px;
@@ -981,7 +948,6 @@ ol {
   line-height: 1.667;
   letter-spacing: 0.02em;
 }
-
 
 .gallery-img {
   width: 100%;
@@ -1427,7 +1393,6 @@ ol {
     color: #000000;
   }
 }
-
 
 .footer {
   background-color: #fff5f6;
