--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -68,6 +68,7 @@
   margin: 0 auto;
   max-width: 220px;
 }
+
 .about-btn {
   margin-top: 17px;
   width: 176px;
@@ -116,13 +117,8 @@
     margin-right: auto;
     margin-top: 0;
   }
-
-  .text-about {
-    align-items: flex-start;
-    text-align: start;
-    justify-content: start;
-    justify-items: start;
-    justify-self: start;
+  .text-about{
+   margin-top: 100px;
   }
 
   .about-paragraph {
@@ -133,7 +129,7 @@
     font-size: 14px;
     line-height: 1.7;
     margin: 0;
-    margin-top: 100px;
+    
     margin-bottom: 50px;
   }
 
@@ -153,4 +149,48 @@
     margin-top: 62px;
     width: 176px;
   }
+}
+
+@media screen and (min-width: 1200px){
+  .about-container{
+  background-image: url(../images/images/about/backgraund-img/backmilkDecktop@1x.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  }
+
+  .text-about{
+    margin-left: 75px;
+    margin-bottom: 145px;
+  }
+  .title-container {
+    max-width: 1200px;
+  }
+
+  .about-description{
+    font-size: 30px;
+    line-height: 34px;
+  }
+
+
+  .title{
+    font-size: 58px;
+    line-height: 66px;
+  }
+
+  .about-paragraph{
+    max-width: 463px;
+    font-size: 16px;
+    line-height: 1.7;
+  }
+  
+  .about-text{
+    max-width: 463px;
+    font-size: 14px;
+    line-height: 1.9;
+  }
+
+  .about-btn {
+    margin-top: 35px;
+  }
+
 }
