--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,7 +10,7 @@
         <div class="footer__contakt">
             <ul class="footer__social list">
                 <li class="footer__social-list">
-                    <a class="footer__social-link" href="https://github.com/">
+                    <a class="footer__social-link" href="https://github.com/" target="_blank" rel="noreferrer noopener">
                         <div class="footer__social-item">
                             <svg class="footer__social-icon">
                                 <use href="./images/sprite.svg#github"></use>
@@ -19,7 +19,7 @@
                     </a>
                 </li>
                 <li class="footer__social-list">
-                    <a class="footer__social-link" href="https://telegram.org/">
+                    <a class="footer__social-link" href="https://telegram.org/" target="_blank" rel="noreferrer noopener">
                         <div class="footer__social-item">
                             <svg class="footer__social-icon">
                                 <use href="./images/sprite.svg#telegram"></use>
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li class="footer__social-list">
-                    <a class="footer__social-link" href="https://uk-ua.facebook.com/">
+                    <a class="footer__social-link" href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener">
                         <div class="footer__social-item">
                             <svg class="footer__social-icon">
                                 <use href="./images/sprite.svg#fb"></use>
