--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -35,7 +35,7 @@
                     <use href="./images/sprite.svg#icon-burger"></use>
                 </svg>
             </button>
-            <button class="buy" type="button">Buy now ></button>
+            <button class="buy" type="button" data-modal-open>Buy now </button>
         </div>
     </div>
 </header>
