--- a/src/sass/_modal-buy-now.scss
+++ b/src/sass/_modal-buy-now.scss
@@ -1,3 +1,13 @@
+.backdrop {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
 .modal {
     position: absolute;
     top: 50%;
@@ -5,21 +15,22 @@
     transform: translate(-50%, -50%);
     width: 100%;
     max-width: 450px;
-    height: 75%;
+    height: 85%;
     max-height: 609px;
     overflow: scroll;
     background-color: $bg-modal-color;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 40px;
+    z-index: 10;
 }
 
 .modal-close-btn { 
     position: absolute;
     top: 8px;
     right: 8px;
-    Width: 30px;
-    Height: 30px;
+    width: 30px;
+    height: 30px;
     background-color: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
