переменную цвета убрал, так как ее Анжела внесет,,, поменял на ее название в сцсс

--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -41,7 +41,7 @@
 }
 
 .contacts__item-title {
-  background: #f0d1a5;
+  background: var(--bg-beige-color);
   color: var(--color-design-white);
   text-transform: uppercase;
   display: inline-flex;
@@ -110,7 +110,7 @@
 
   &:nth-child(2n) {
     .contacts__item-title {
-      background: var(--color-even-contacts);
+      background: var(--bg-green-color);
     }
   }
 
