Добавляет модальное окно в about

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -34,7 +34,7 @@
                 </p>
         
                 <!-- ABOUT --- BUTTON-READ MORE -->
-                <button class="about-btn" type="button">
+                <button class="about-btn" type="button" data-modal-open>
                     <span class="about-btn-text">Read more</span> 
                     <svg class="about-btn-icon">
                         <use href="./images/sprite.svg#icon-line"></use>
@@ -44,3 +44,12 @@
         </div>
     </div>
 </section>
+<div class="about-backdrop is-hidden" data-modal>
+    <div class="about-modal-wnd">
+        <button type="button" class="modal-close-btn" data-modal-close>
+            <svg class="close-btn-icon">
+                <use href="./images/sprite.svg#close-btn"></use>
+            </svg>
+        </button>
+    </div>
+</div>
