Ставит правильно контейнер

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,9 +1,10 @@
 <section class="hero">
-    <div class="container">
-            <!-- <include src="./partials/header.html"></include> -->
 
-            <h2 class="hero__logo">Я тут временный гость)</h2>
+            <div class="container">
+                <include src="./partials/header.html"></include>
+            </div>
 
+        <div class="container">
             <div class="hero__title-thumb">
                 <h1 class="hero__title">
                     ice cream
