--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -14,8 +14,14 @@
             </ul>
         </div>
         <div class="hero-btn-position">
-            <button type="button" class="hero-btn hero-products-btn">Products</button>
-            <button type="button" class="hero-btn hero-how-btn">How it’s made?</button>
+            <button type="button" class="hero-btn hero-products-btn">
+                Products
+                <a href="#products"></a>
+            </button>
+            <button type="button" class="hero-btn hero-how-btn">
+                How it’s made?
+                <a href="#how-made"></a>
+            </button>
         </div>
         <div class="hero-bio-position">
             <div class="hero-bio-img">
