--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -240,7 +240,6 @@
     position: absolute;
     left: 36px;
     top: 0px;
-    z-index: 5;
     content: '';
     width: 16px;
     height: 16px;
@@ -251,6 +250,7 @@
   }
 
   .hero-counter-number {
+    position: relative;
     padding-right: 10px;
     z-index: 555;
     font-family: Titan One;
