--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -97,7 +97,7 @@
         Our Locations
         <svg>
           <use
-            href="./images/icons/symbol-defs.svg#icon-left-arrow-svg-1"
+            href="./images/icons/symbol-defs-sprite.svg#icon-arrow-white-icn"
           ></use>
         </svg>
       </button>
@@ -105,7 +105,7 @@
         Franchise
         <svg>
           <use
-            href="./images/icons/symbol-defs.svg#icon-left-arrow-svg-2"
+            href="./images/icons/symbol-defs-sprite.svg#icon-arrow-icn"
           ></use>
         </svg>
       </button>
