--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -24,21 +24,21 @@
                     <li class="social__list-item">
                         <a href="" class="social__list-link">
                             <svg class="social__list-icon" width="19" height="19">
-                                <use href="./images/icons/symbol-defs.svg#icon-github"></use>
+                                <use href="./images/icons/symbol-defs-sprite.svg#icon-github-icn"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social__list-item">
                         <a href="" class="social__list-link">
                             <svg class="social__list-icon" width="20" height="17">
-                                <use href="./images/icons/symbol-defs.svg#icon-telegram"></use>
+                                <use href="./images/icons/symbol-defs-sprite.svg#icon-telegram-icn"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social__list-item">
                         <a href="" class="social__list-link">
                             <svg class="social__list-icon" width="9" height="19">
-                                <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
+                                <use href="./images/icons/symbol-defs-sprite.svg#icon-facebook-icn"></use>
                             </svg>
                         </a>
                     </li>
