--- a/src/partials/production.html
+++ b/src/partials/production.html
@@ -37,7 +37,7 @@
                 <button class="production__button" type="button">
                     Read more
                     <svg>
-                        <use href="./images/icons/symbol-defs.svg#icon-left-arrow-svg-2"></use>
+                        <use href="./images/icons/symbol-defs-sprite.svg#icon-arrow-icn"></use>
                     </svg>
                 </button>
             </div>
