--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,7 +30,7 @@
         <div class="burger-block">
                 <button type="button" class="burger-btn" data-menu-button>
             <svg class="burger-icon">
-                <use href="./images/icons/symbol-defs.svg#icon-burger"></use>
+                <use href="./images/icons/symbol-defs-sprite.svg#icon-burger-icn"></use>
             </svg>
         </button>
         </div>
@@ -38,7 +38,7 @@
             <button class="header-btn" type="button" data-modal-open>
                 Buy now
             <svg>
-                <use href="./images/icons/symbol-defs.svg#icon-left-arrow-svg-2"></use>
+                <use href="./images/icons/symbol-defs-sprite.svg#icon-arrow-icn"></use>
             </svg>
             </button>
 
