--- a/src/partials/mobile.html
+++ b/src/partials/mobile.html
@@ -3,7 +3,7 @@
     <div class="mobile-menu-block-svg">
         <button class="close-button" type="button" data-menu-close>
          <svg class="mobile-menu-close-icon">
-             <use href="./images/icons/symbol-defs.svg#icon-close"></use>
+             <use href="./images/icons/symbol-defs-sprite.svg#icon-close"></use>
          </svg>
         </button>
         </div>     
@@ -11,7 +11,7 @@
     <button class="mobile-menu-button" type="button" data-modal-open3>
         Buy now
         <svg class="mobile-menu-vector-icon">
-            <use href="./images/icons/symbol-defs.svg#icon-left-arrow-svg-2"></use>
+            <use href="./images/icons/symbol-defs-sprite.svg#icon-arrow-icn"></use>
         </svg>
     </button>
     <ul class="mobile-menu-nav">
