--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,7 +1,7 @@
 <section class="about-section">
     <div class="container">
-        <p class="label-title">tradition and love</p>
-        <h class="title">how it’s made?</h>
+        <p class="label-title" >tradition and love</p>
+        <h class="title" id="how-made">how it’s made?</h>
         <div class="about-img-text">
             <div class="about-img">
             </div>
