--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -199,36 +199,44 @@ transition: background-color var(--transition-duration) var(--timing-function);
   
 }
 
-// .backdrop {
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   background-color: rgba(209, 202, 202, 0.493);
-//   opacity: 1;
-//   transition: opacity var(--transition-duration) var(--timing-function);
-// }
-// .backdrop.is-hidden {
-//   opacity: 0;
-//   pointer-events: none;
-//   visibility: hidden;
-// }
-// .modal {
-//   position: absolute;
-//   top: 50px;
-//   left: 50px;
-//   transform: translate(-50%, -50%) scale(1);
-//   width: 100%;
-//   max-width: 450px;
-//   height: 95%;
-//   max-height: 609px;
-//   background-color: var(--bg-feedback);
-//   border-radius: 4px;
-//   transition: transform var(--transition-duration) var(--timing-function);
+.backdrop-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(209, 202, 202, 0.493);
+  opacity: 1;
+  transition: opacity var(--transition-duration) var(--timing-function);
+}
+.backdrop-modal.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 280px;
+  max-width: 450px;
+  height: 95%;
+  max-height: 450px;
+  overflow-y: scroll;
+  z-index: 1050;
+  background-color: var(--bg-feedback);
+  border-radius: 4px;
+   background-image: url('../images/about/mobile-sectionbg.png');
+  transition: transform var(--transition-duration) var(--timing-function);
 
 
-  // .backdrop.is-hidden & {
-  //   transform: translate(-50%, -50%) scale(0.8);
-  // }
-// }
+  .backdrop-modal.is-hidden & {
+    transform: translate(-50%, -50%) scale(0.8);
+  }
+}
+.modal-image-cow{
+  width: 75px;
+  height: 75px;
+  
+}
