.js for modal + menu

--- a/src/partials/about-modal.html
+++ b/src/partials/about-modal.html
@@ -1,6 +1,6 @@
-<div class="about-backdrop is-hidden" data-modal>
+<div class="about-backdrop is-hidden" about-modal>
   <div class="about-modal">
-    <button class="about-close" type="button" data-modal-close>
+    <button class="about-close" type="button" about-modal-close>
       <svg class="close-icon" width="11" height="11">
         <use href="./images/sprite.svg#icon-close"></use>
       </svg>
