--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -56,7 +56,7 @@
         <p class="about-third-paragraph">
           Aliquam erat volutpat. Aenean accumsan.
         </p>
-        <button type="button" class="about-button" data-modal-open>
+        <button type="button" class="about-button" about-modal-open>
           Read more
           <svg class="about-arrow" width="7" height="10">
             <use href="./images/sprite.svg#icon-arrow-btn"></use>
