--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -1,42 +1,40 @@
 <header class="header">
-    <div class="header-container">
-        <a href="./index.html" class="logo">
-            <picture class="logo-picture">
-                <source srcset="./images/logo.webp 1x, ./images/logo@2x.webp 2x">
-            
-                <source srcset="./images/logo.png 1x, ./images/logo@2x.png 2x">
-                
-                <img src="./images/logo.png" alt="logo company">
-            </picture>
-        </a>
-        <nav class="nav">
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">About us</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">How it's made?</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Our products</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
-                </li>
-            </ul>
+  <div class="header-container">
+    <a href="./index.html" class="logo">
+      <picture class="logo-picture">
+        <source srcset="./images/logo.webp 1x, ./images/logo@2x.webp 2x" />
 
-        </nav>
-        <div class="menu-box">
-            <button href="#" class="burger-menu">
-                <svg class="burger-icon" width="20px" height="12px">
-                    <use href="./images/sprite.svg#icon-burger"></use>
-                </svg>
-            </button>
-            <button class="buy" type="button">Buy now ></button>
-        </div>
+        <source srcset="./images/logo.png 1x, ./images/logo@2x.png 2x" />
+
+        <img src="./images/logo.png" alt="logo company" />
+      </picture>
+    </a>
+    <nav class="nav">
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="#" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">About us</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">How it's made?</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Our products</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Contact</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="menu-box">
+      <button href="#" class="burger-menu" header-modal-open>
+        <svg class="burger-icon" width="20px" height="12px">
+          <use href="./images/sprite.svg#icon-burger"></use>
+        </svg>
+      </button>
+      <button class="buy" type="button" data-modal-open>Buy now ></button>
     </div>
+  </div>
 </header>
-
