--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -238,5 +238,9 @@ transition: background-color var(--transition-duration) var(--timing-function);
 .modal-image-cow{
   width: 75px;
   height: 75px;
-  
+animation: mymove var(--transition-duration) var(--timing-function);
+}
+@keyframes mymove {
+  from {top: 0px;}
+  to {top: 200px;}
 }
