добавил адаптив отзывов

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,29 +1,35 @@
-<section>
+<section class="swiper-section">
     <div class="container swiper">
     <div class="swiper-container">
     <div class="swiper-wrapper">
         <div class="swiper-slide">
             <img class="customer-icon" alt="Клиент 1" src="./images/6-customers/person1.png">
+            <div class="review-container">
             <span class="review">
             Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
             congue. Lorem ipsum primis in nibh vel risus.
             </span>
+            </div>
             <p class="place-title">Emily, Los Angeles</p>
         </div>
         <div class="swiper-slide" >
             <img class="customer-icon" alt="Клиент 2" src="./images/6-customers/person2.png">
+            <div class="review-container">
             <span class="review">
             Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
             congue. Lorem ipsum primis in nibh vel risus.
             </span>
+            </div>
             <p class="place-title">Helga, New York</p>
         </div>
         <div class="swiper-slide">
             <img class="customer-icon" alt="Клиент 3" src="./images/6-customers/person3.png">
+            <div class="review-container">
             <span class="review">
             Aliquam sem. In hendrerit nulla quam nunc, accumsan
             congue. Lorem ipsum primis in nibh vel risus.
             </span>
+            </div>
             <p class="place-title">Sarah, Sun Francisco</p>
         </div>
     </div>
