--- a/src/sass/components/_customer-reviews.scss
+++ b/src/sass/components/_customer-reviews.scss
@@ -1,10 +1,26 @@
+.swiper-section {
+  @media screen and (min-width:1280px){
+    background-color: var(--backgroundPink);
+  }
+}
+
 .swiper-container {
       width: 100%;
       height: 100%;
+        @media screen and (min-width:1280px){
+    background-color: var(--backgroundPink);
+  }
     }
 
 .swiper-slide {
-     padding: 123px 176px;
+     padding: 80px 20px 30px;
+     @media screen and (min-width:768px){
+       padding: 119px 40px 35px;
+     }
+          @media screen and (min-width:1280px){
+       padding: 123px 40px 35px;
+           background-color: var(--backgroundPink);
+     }
       text-align: center;
       font-size: 18px;
       background: #fff;
@@ -26,7 +42,8 @@
 
 .review {
 display: block;
-    position: static;
+    position: relative;
+    margin-bottom: 50px;
     padding-left: 10px;
     padding-right: 10px;
     color: #000;
@@ -40,6 +57,12 @@ display: block;
 180deg
 ,#e1e1e1 0,transparent 1px,transparent 30px,#e1e1e1 0,#e1e1e1 31px);
     background-position: center bottom 3px;
+        @media screen and (min-width:768px){
+      font-size: 14px;
+    }
+    @media screen and (min-width:1280px){
+       font-size: 16px;
+    }
 }
 
 .review::before {
@@ -49,20 +72,18 @@ display: block;
     line-height: 42px;  
     color: #fff;  
     float: left;  
-    position: relative;  
+    position: absolute;  
     top: -15px;  
-    // border-radius: 25px;  
-  
     background: url(/images/6-customers/quote.png) ;  
     background-repeat: no-repeat;
-  
-
   display: block;
   width: 54px;
   height: 50px;
+  z-index: -1;
 }
 
 .place-title::before {
+  margin-bottom: 15px;
   display: block;
   content: url(/images/6-customers/dots.png);
 } 
@@ -91,3 +112,25 @@ display: block;
     display: flex;
     flex-direction: column;
   }
+
+  .customer-icon {
+    width: 85px;
+    height: 85px;
+    margin-bottom: 72px;
+    @media screen and (min-width:768px){
+      margin-bottom: 66px;
+    }
+    @media screen and (min-width:1280px){
+      margin-bottom: 62px;
+    }
+  }
+
+.swiper-pagination {
+  margin-bottom: 86px;
+  @media screen and (min-width:768px){
+      margin-bottom: 119px;
+    }
+     @media screen and (min-width:1280px){
+      margin-bottom: 132px;
+    }
+}
