--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -19,7 +19,7 @@
                         rhoncus
                         orci in imperdiet placerat.
                         Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
-                        <br>tincidunt.
+                        tincidunt.
                         <br>
                         <br>
                         Aliquam erat volutpat. Aenean accumsan.
