--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -19,16 +19,19 @@
   text-transform: uppercase;
   color: #ffa5ba;
 }
+
 .title {
   margin-top: 15px;
   font-size: 34px;
   line-height: 39px;
 }
+
 .title-container {
   max-width: 200px;
   margin-left: auto;
   margin-right: auto;
 }
+
 .about-paragraph {
   max-width: 220px;
   font-family: DM Sans;
@@ -40,10 +43,12 @@
   display: block;
   margin: 46px auto;
 }
+
 .img-container {
   max-width: 280px;
   margin: 0 auto;
 }
+
 .about-img {
   display: block;
   width: 100%;
@@ -52,12 +57,14 @@
   margin-right: auto;
   margin-top: 26px;
 }
+
 .about-background {
   display: block;
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
+
 .about-text {
   font-family: DM Sans;
   font-style: normal;
@@ -93,7 +100,7 @@
     line-height: 55px;
   }
 
-  .about{
+  .about {
     background-image: none;
   }
 
@@ -102,6 +109,7 @@
     margin: 0 auto;
     justify-content: center;
   }
+
   .img-container {
     max-width: 340px;
     height: 340px;
@@ -109,6 +117,7 @@
     margin-top: 50px;
     margin-right: 17px;
   }
+
   .about-img {
     display: block;
     max-width: 100%;
@@ -117,6 +126,7 @@
     margin-right: auto;
     margin-top: 0;
   }
+  
   .text-about{
    margin-top: 100px;
   }
@@ -156,12 +166,14 @@
   background-image: url(../images/images/about/backgraund-img/backmilkDecktop@1x.png);
   background-repeat: no-repeat;
   background-size: contain;
+  background-position: center;
   }
 
   .text-about{
     margin-left: 75px;
     margin-bottom: 145px;
   }
+
   .title-container {
     max-width: 1200px;
   }
@@ -178,13 +190,15 @@
   }
 
   .about-paragraph{
-    max-width: 463px;
+    max-width: 460px;
     font-size: 16px;
-    line-height: 1.7;
+    line-height: 28px;
+    margin-bottom: 35px;
+
   }
   
   .about-text{
-    max-width: 463px;
+    max-width: 460px;
     font-size: 14px;
     line-height: 1.9;
   }
