убрала лишние паддинги

--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -3,13 +3,8 @@
   padding-bottom: 97px;
   background-color: var(--bg-color-light);
   @media screen and (min-width: 1280px) {
+    padding-top: 0px;
     background-color: var(--text-color-dark-bg);
-  }
-  .container {
-    padding: 0 20px;
-    @media screen and (min-width: 768px) {
-      padding-left: 36px;
-    }
   }
 }
 
