--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -16,7 +16,7 @@
    line-height: 1.667;
    text-transform: uppercase;
    color: var(--color-subtitle);
-   padding-bottom:30px;
+   margin-bottom:30px;
   }
 
   &__text-slog{
@@ -108,14 +108,44 @@
       justify-content: space-between;
     }
 
+    &__text{
+      max-width:340px;
+      margin-bottom:0;
+   } 
+
     &__text-title{
-      font-family:var(--text-secondary);
       font-size: 26px;
       line-height: 1.154;
       letter-spacing: 0.04em;
-      text-transform: uppercase;
-      color: var(--color-subtitle);
-      padding-bottom:30px;
     }
+
+    &__text-slog{
+      font-size: 48px;
+      line-height: 55px;
+      letter-spacing: 0.06em;
+    }
+
+    &__contakt-tel{
+      font-size: 14px;
+      line-height: 1,857;
+    }
+    &__copyright{
+    border-top:1px solid #E1E1E1;
+    min-height:83px;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+  }
+
+  &__copyright-text{
+    width: 190px;
+    font-family:var(--text-main);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.5;
+    text-align: center;
+    color: var(--color-description);
+    padding: 0 20px;
+  }
   }
 }
