рабочие кнопки (карта без стилей)

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -93,7 +93,7 @@
       </li>
     </ul>
     <div class="contacts__position--button">
-      <button class="contacts__button contacts__button--red btn" type="button">
+      <button class="contacts__button contacts__button--red btn" type="button" data-modal-open2>
         Our Locations
         <svg>
           <use
@@ -101,7 +101,7 @@
           ></use>
         </svg>
       </button>
-      <button class="contacts__button contacts__button--white" type="button" data-modal-open2>
+      <button class="contacts__button contacts__button--white" type="button" data-modal-open3>
         Franchise
         <svg>
           <use
