--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,10 +1,8 @@
 <section class="hero">
-
-            <div class="container">
+    <div class="container">
                 <include src="./partials/header.html"></include>
-            </div>
 
-        <div class="container">
+
             <div class="hero__title-thumb">
                 <h1 class="hero__title">
                     ice cream
@@ -14,7 +12,7 @@
     
                 <ul class="compositions-links">
                     <li class="compositions-links__item">
-                        <a class="button button--secondary link" href="#">Products</a>
+                        <a class="button button--accent link" href="#">Products</a>
                     </li>
     
                     <li class="compositions-links__item">
